Human review, details in code guide, made Activity stack match to expected code guide